nvim: C-S shortcuts for window management

--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -11,6 +11,14 @@ tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
 
+# unmap ctrl+shift for vim shortcuts
+map ctrl+shift+r no_op
+map ctrl+shift+m no_op
+map ctrl+shift+h no_op
+map ctrl+shift+j no_op
+map ctrl+shift+k no_op
+map ctrl+shift+l no_op
+
 # vim:ft=kitty
 
 ## name:     Catppuccin Kitty Macchiato
