--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -2,7 +2,7 @@ shell zsh
 enable_audio_bell   no
 confirm_os_window_close 0
 
-font_family         SauceCodePro Nerd Font Mono
+font_family         Liga SFMono Nerd Font 
 
 map ctrl+enter send_text normal,application \x1b[13;5u
 map shift+enter send_text normal,application \x1b[13;2u
